--- a/app/css/knob.css
+++ b/app/css/knob.css
@@ -7,7 +7,7 @@
   height: 4em;
   border-radius: 50%;
   border: solid 0.25em #0e0e0e;
-  margin: 10px;
+  margin: 13px;
   margin-bottom: 55px;
   background: #181818;
   background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #1d1d1d), color-stop(1, #111111));
@@ -20,10 +20,10 @@
 
 #currentfeed, #currentspeed, #currentrapid {
   font-family: "Varela Round", sans-serif;
-  color: rgba(255, 255, 255, 0.4);
+  color: #ccc;
   text-transform: uppercase;
   -webkit-font-smoothing: antialiased;
-  font-size: 70%;
+  /* font-size: 70%; */
   position: absolute;
   width: 100%;
   height: 100%;
@@ -40,16 +40,33 @@
   z-index: 10;
 }
 
+.test {
+  right: 1px;
+  top: 1px;
+  width: 8px;
+  height: 8px;
+  background: #00CC00;
+  background-image: radial-gradient(top, #616161 0%, #616161 20%, #535353 60%);
+  border-radius: 50%;
+  box-shadow: 0 0 4px #1C1C17;
+  transition: all .3s ease;
+  box-shadow: 0 0 0.4em 0 #00aa00,
+    /* box-shadow: 0 0 4px #1C1C17, */
+    inset 0 2px 2px 0px #00CC00;
+}
+
 #knobfeed::before, #knobspeed::before, #knobrapid::before {
+  transform: rotate(135deg);
   content: "";
   position: absolute;
   bottom: 19%;
   left: 19%;
-  width: 8%;
-  height: 7%;
-  background-color: #008800;
+  width: 6px;
+  height: 6px;
   border-radius: 50%;
-  box-shadow: 0 0 0.4em 0 #005500;
+  background-color: #00ee00;
+  border-radius: 50%;
+  box-shadow: 0 0 0.4em 0 #00aa00;
 }
 
 .min,
@@ -57,29 +74,30 @@
 .knob-title, .knob-reset {
   display: block;
   font-family: "Varela Round", sans-serif;
-  color: rgba(255, 255, 255, 0.4);
+  color: #eee;
   text-transform: uppercase;
   -webkit-font-smoothing: antialiased;
-  font-size: 80%;
+  /* font-size: 80%; */
   position: absolute;
   opacity: .8;
 }
 
 .knob-title {
-  color: rgba(255, 255, 255, 0.9);
-  bottom: -3em;
-  left: -1em;
+  bottom: -2em;
+  left: -1.2em;
 }
 
 .knob-reset {
-  bottom: -3em;
-  left: 2.7em;
+  bottom: -2em;
+  left: 2.3em;
 }
 
 .knob-reset-btn {
+  box-shadow: 2px 3px #111;
   font-size: 10px;
-  color: #00cc00;
-  border: 1px solid #00cc00;
+  color: #eee;
+  border: 1px solid #777;
+  border-radius: 5px;
   background: #181818;
   background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #1d1d1d), color-stop(1, #131313));
   background: -ms-linear-gradient(bottom, #1d1d1d, #131313);
@@ -110,8 +128,8 @@
 }
 
 .active::after {
-  background-color: #00cc00;
-  box-shadow: 0 0 0.3em 0.08em #005500;
+  background-color: #00ee00;
+  box-shadow: 0 0 0.3em 0.08em #00aa00;
   transition: all 50ms ease-in;
 }
 
