--- a/app/css/index.css
+++ b/app/css/index.css
@@ -15,6 +15,17 @@ body {
   color: #fff;
 }
 
+.appbar {
+  background-color: #333;
+  padding: 5px;
+  margin: 0px;
+  border-radius: 5px;
+  border: 1px solid #777;
+  -webkit-box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.65);
+}
+
 @font-face {
   font-family: 'digital-7';
   src: url('digital-7.ttf');
@@ -90,9 +101,10 @@ input:focus, textarea, button:focus {
 #console {
   font-family: "Lucida Console", Monaco, monospace;
   height: 240px;
-  width: 100%;
+  width: 397px;
   overflow-y: auto;
   overflow-x: none;
+  overflow-wrap: break-word;
   text-align: left;
   padding: 5px;
   font-size: 12px;
@@ -165,7 +177,7 @@ input:focus, textarea, button:focus {
   padding: 5px;
   margin: 3px;
   border-radius: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid #777;
   -webkit-box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.15);
   -moz-box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.15);
   box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.65);
@@ -304,6 +316,18 @@ input:focus, textarea, button:focus {
   background: -o-linear-gradient(#131313, #1d1d1d);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#131313', endColorstr='#1d1d1d', GradientType=0);
   box-shadow: 2px 3px 2px #111;
+}
+
+.jogbtn-x {
+  color: #cc4444;
+}
+
+.jogbtn-y {
+  color: #55cc55;
+}
+
+.jogbtn-z {
+  color: #5555cc;
 }
 
 .border-bottom {
