--- a/app/css/knob.css
+++ b/app/css/knob.css
@@ -1,5 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Varela+Round|Open+Sans:300);
-
+/* @import url(https://fonts.googleapis.com/css?family=Varela+Round|Open+Sans:300); */
 .knob-surround {
   position: relative;
   background-color: grey;
@@ -8,7 +7,8 @@
   border-radius: 50%;
   border: solid 0.25em #0e0e0e;
   margin: 13px;
-  margin-bottom: 55px;
+  margin-top: 15px;
+  margin-bottom: 40px;
   background: #181818;
   background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #1d1d1d), color-stop(1, #111111));
   background: -ms-linear-gradient(bottom, #1d1d1d, #111111);
@@ -18,8 +18,8 @@
   box-shadow: 0 0.2em 0.1em 0.05em rgba(255, 255, 255, 0.1) inset, 0 -0.2em 0.1em 0.05em rgba(0, 0, 0, 0.5) inset, 0 0.5em 0.65em 0 rgba(0, 0, 0, 0.3);
 }
 
-#currentfeed, #currentspeed, #currentrapid {
-  font-family: "Varela Round", sans-serif;
+#currentfeed, #currentspeed, #currentrapid, #currentxyjograte, #currentzjograte {
+  /* font-family: "Varela Round", sans-serif; */
   color: #ccc;
   text-transform: uppercase;
   -webkit-font-smoothing: antialiased;
@@ -31,7 +31,20 @@
   text-align: center;
 }
 
-#knobfeed, #knobspeed, #knobrapid {
+#unitxyjograte, #unitzjograte {
+  /* font-family: "Varela Round", sans-serif; */
+  color: #ccc;
+  /* text-transform: uppercase; */
+  -webkit-font-smoothing: antialiased;
+  font-size: 60%;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: calc(50% + 8px);
+  text-align: center;
+}
+
+#knobfeed, #knobspeed, #knobrapid, #knobxyjograte, #knobzjograte {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -55,7 +68,7 @@
     inset 0 2px 2px 0px #00CC00;
 }
 
-#knobfeed::before, #knobspeed::before, #knobrapid::before {
+#knobfeed::before, #knobspeed::before, #knobrapid::before, #knobxyjograte::before, #knobzjograte::before {
   transform: rotate(135deg);
   content: "";
   position: absolute;
@@ -73,7 +86,7 @@
 .max,
 .knob-title, .knob-reset {
   display: block;
-  font-family: "Varela Round", sans-serif;
+  /* font-family: "Varela Round", sans-serif; */
   color: #eee;
   text-transform: uppercase;
   -webkit-font-smoothing: antialiased;
@@ -106,7 +119,7 @@
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#131313', endColorstr='#1d1d1d', GradientType=0);
 }
 
-.ticksfeed, .ticksspeed, .ticksrapid {
+.ticksfeed, .ticksspeed, .ticksrapid, .ticksxyjograte, .tickszjograte {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -116,7 +129,7 @@
   overflow: visible;
 }
 
-.ticksfeed::after, .ticksspeed::after, .ticksrapid::after {
+.ticksfeed::after, .ticksspeed::after, .ticksrapid::after, .ticksxyjograte::after, .tickszjograte::after {
   content: "";
   width: 0.1em;
   height: 0.4em;
@@ -133,127 +146,127 @@
   transition: all 50ms ease-in;
 }
 
-.ticksfeed:nth-child(1), .ticksspeed:nth-child(1), .ticksrapid:nth-child(1) {
+.ticksfeed:nth-child(1), .ticksspeed:nth-child(1), .ticksrapid:nth-child(1), .ticksxyjograte:nth-child(1), .tickszjograte:nth-child(1) {
   transform: rotate(-150deg);
 }
 
-.ticksfeed:nth-child(2), .ticksspeed:nth-child(2), .ticksrapid:nth-child(2) {
+.ticksfeed:nth-child(2), .ticksspeed:nth-child(2), .ticksrapid:nth-child(2), .ticksxyjograte:nth-child(2), .tickszjograte:nth-child(2) {
   transform: rotate(-140deg);
 }
 
-.ticksfeed:nth-child(3), .ticksspeed:nth-child(3), .ticksrapid:nth-child(3) {
+.ticksfeed:nth-child(3), .ticksspeed:nth-child(3), .ticksrapid:nth-child(3), .ticksxyjograte:nth-child(3), .tickszjograte:nth-child(3) {
   transform: rotate(-130deg);
 }
 
-.ticksfeed:nth-child(4), .ticksspeed:nth-child(4), .ticksrapid:nth-child(4) {
+.ticksfeed:nth-child(4), .ticksspeed:nth-child(4), .ticksrapid:nth-child(4), .ticksxyjograte:nth-child(4), .tickszjograte:nth-child(4) {
   transform: rotate(-120deg);
 }
 
-.ticksfeed:nth-child(5), .ticksspeed:nth-child(5), .ticksrapid:nth-child(5) {
+.ticksfeed:nth-child(5), .ticksspeed:nth-child(5), .ticksrapid:nth-child(5), .ticksxyjograte:nth-child(5), .tickszjograte:nth-child(5) {
   transform: rotate(-110deg);
 }
 
-.ticksfeed:nth-child(6), .ticksspeed:nth-child(6), .ticksrapid:nth-child(6) {
+.ticksfeed:nth-child(6), .ticksspeed:nth-child(6), .ticksrapid:nth-child(6), .ticksxyjograte:nth-child(6), .tickszjograte:nth-child(6) {
   transform: rotate(-100deg);
 }
 
-.ticksfeed:nth-child(7), .ticksspeed:nth-child(7), .ticksrapid:nth-child(7) {
+.ticksfeed:nth-child(7), .ticksspeed:nth-child(7), .ticksrapid:nth-child(7), .ticksxyjograte:nth-child(7), .tickszjograte:nth-child(7) {
   transform: rotate(-90deg);
 }
 
-.ticksfeed:nth-child(8), .ticksspeed:nth-child(8), .ticksrapid:nth-child(8) {
+.ticksfeed:nth-child(8), .ticksspeed:nth-child(8), .ticksrapid:nth-child(8), .ticksxyjograte:nth-child(8), .tickszjograte:nth-child(8) {
   transform: rotate(-80deg);
 }
 
-.ticksfeed:nth-child(9), .ticksspeed:nth-child(9), .ticksrapid:nth-child(9) {
+.ticksfeed:nth-child(9), .ticksspeed:nth-child(9), .ticksrapid:nth-child(9), .ticksxyjograte:nth-child(9), .tickszjograte:nth-child(9) {
   transform: rotate(-70deg);
 }
 
-.ticksfeed:nth-child(10), .ticksspeed:nth-child(10), .ticksrapid:nth-child(10) {
+.ticksfeed:nth-child(10), .ticksspeed:nth-child(10), .ticksrapid:nth-child(10), .ticksxyjograte:nth-child(10), .tickszjograte:nth-child(10) {
   transform: rotate(-60deg);
 }
 
-.ticksfeed:nth-child(11), .ticksspeed:nth-child(11), .ticksrapid:nth-child(11) {
+.ticksfeed:nth-child(11), .ticksspeed:nth-child(11), .ticksrapid:nth-child(11), .ticksxyjograte:nth-child(11), .tickszjograte:nth-child(11) {
   transform: rotate(-50deg);
 }
 
-.ticksfeed:nth-child(12), .ticksspeed:nth-child(12), .ticksrapid:nth-child(12) {
+.ticksfeed:nth-child(12), .ticksspeed:nth-child(12), .ticksrapid:nth-child(12), .ticksxyjograte:nth-child(12), .tickszjograte:nth-child(12) {
   transform: rotate(-40deg);
 }
 
-.ticksfeed:nth-child(13), .ticksspeed:nth-child(13), .ticksrapid:nth-child(13) {
+.ticksfeed:nth-child(13), .ticksspeed:nth-child(13), .ticksrapid:nth-child(13), .ticksxyjograte:nth-child(13), .tickszjograte:nth-child(13) {
   transform: rotate(-30deg);
 }
 
-.ticksfeed:nth-child(14), .ticksspeed:nth-child(14), .ticksrapid:nth-child(14) {
+.ticksfeed:nth-child(14), .ticksspeed:nth-child(14), .ticksrapid:nth-child(14), .ticksxyjograte:nth-child(14), .tickszjograte:nth-child(14) {
   transform: rotate(-20deg);
 }
 
-.ticksfeed:nth-child(15), .ticksspeed:nth-child(15), .ticksrapid:nth-child(15) {
+.ticksfeed:nth-child(15), .ticksspeed:nth-child(15), .ticksrapid:nth-child(15), .ticksxyjograte:nth-child(15), .tickszjograte:nth-child(15) {
   transform: rotate(-10deg);
 }
 
-.ticksfeed:nth-child(16), .ticksspeed:nth-child(16), .ticksrapid:nth-child(16) {
+.ticksfeed:nth-child(16), .ticksspeed:nth-child(16), .ticksrapid:nth-child(16), .ticksxyjograte:nth-child(16), .tickszjograte:nth-child(16) {
   transform: rotate(0deg);
 }
 
-.ticksfeed:nth-child(17), .ticksspeed:nth-child(17), .ticksrapid:nth-child(17) {
+.ticksfeed:nth-child(17), .ticksspeed:nth-child(17), .ticksrapid:nth-child(17), .ticksxyjograte:nth-child(17), .tickszjograte:nth-child(17) {
   transform: rotate(10deg);
 }
 
-.ticksfeed:nth-child(18), .ticksspeed:nth-child(18), .ticksrapid:nth-child(18) {
+.ticksfeed:nth-child(18), .ticksspeed:nth-child(18), .ticksrapid:nth-child(18), .ticksxyjograte:nth-child(18), .tickszjograte:nth-child(18) {
   transform: rotate(20deg);
 }
 
-.ticksfeed:nth-child(19), .ticksspeed:nth-child(19), .ticksrapid:nth-child(19) {
+.ticksfeed:nth-child(19), .ticksspeed:nth-child(19), .ticksrapid:nth-child(19), .ticksxyjograte:nth-child(19), .tickszjograte:nth-child(19) {
   transform: rotate(30deg);
 }
 
-.ticksfeed:nth-child(20), .ticksspeed:nth-child(20), .ticksrapid:nth-child(20) {
+.ticksfeed:nth-child(20), .ticksspeed:nth-child(20), .ticksrapid:nth-child(20), .ticksxyjograte:nth-child(20), .tickszjograte:nth-child(20) {
   transform: rotate(40deg);
 }
 
-.ticksfeed:nth-child(21), .ticksspeed:nth-child(21), .ticksrapid:nth-child(21) {
+.ticksfeed:nth-child(21), .ticksspeed:nth-child(21), .ticksrapid:nth-child(21), .ticksxyjograte:nth-child(21), .tickszjograte:nth-child(21) {
   transform: rotate(50deg);
 }
 
-.ticksfeed:nth-child(22), .ticksspeed:nth-child(22), .ticksrapid:nth-child(22) {
+.ticksfeed:nth-child(22), .ticksspeed:nth-child(22), .ticksrapid:nth-child(22), .ticksxyjograte:nth-child(22), .tickszjograte:nth-child(22) {
   transform: rotate(60deg);
 }
 
-.ticksfeed:nth-child(23), .ticksspeed:nth-child(23), .ticksrapid:nth-child(23) {
+.ticksfeed:nth-child(23), .ticksspeed:nth-child(23), .ticksrapid:nth-child(23), .ticksxyjograte:nth-child(23), .tickszjograte:nth-child(23) {
   transform: rotate(70deg);
 }
 
-.ticksfeed:nth-child(24), .ticksspeed:nth-child(24), .ticksrapid:nth-child(24) {
+.ticksfeed:nth-child(24), .ticksspeed:nth-child(24), .ticksrapid:nth-child(24), .ticksxyjograte:nth-child(24), .tickszjograte:nth-child(24) {
   transform: rotate(80deg);
 }
 
-.ticksfeed:nth-child(25), .ticksspeed:nth-child(25), .ticksrapid:nth-child(25) {
+.ticksfeed:nth-child(25), .ticksspeed:nth-child(25), .ticksrapid:nth-child(25), .ticksxyjograte:nth-child(25), .tickszjograte:nth-child(25) {
   transform: rotate(90deg);
 }
 
-.ticksfeed:nth-child(26), .ticksspeed:nth-child(26), .ticksrapid:nth-child(26) {
+.ticksfeed:nth-child(26), .ticksspeed:nth-child(26), .ticksrapid:nth-child(26), .ticksxyjograte:nth-child(26), .tickszjograte:nth-child(26) {
   transform: rotate(100deg);
 }
 
-.ticksfeed:nth-child(27), .ticksspeed:nth-child(27), .ticksrapid:nth-child(27) {
+.ticksfeed:nth-child(27), .ticksspeed:nth-child(27), .ticksrapid:nth-child(27), .ticksxyjograte:nth-child(27), .tickszjograte:nth-child(27) {
   transform: rotate(110deg);
 }
 
-.ticksfeed:nth-child(28), .ticksspeed:nth-child(28), .ticksrapid:nth-child(28) {
+.ticksfeed:nth-child(28), .ticksspeed:nth-child(28), .ticksrapid:nth-child(28), .ticksxyjograte:nth-child(28), .tickszjograte:nth-child(28) {
   transform: rotate(120deg);
 }
 
-.ticksfeed:nth-child(29), .ticksspeed:nth-child(29), .ticksrapid:nth-child(29) {
+.ticksfeed:nth-child(29), .ticksspeed:nth-child(29), .ticksrapid:nth-child(29), .ticksxyjograte:nth-child(29), .tickszjograte:nth-child(29) {
   transform: rotate(130deg);
 }
 
-.ticksfeed:nth-child(30), .ticksspeed:nth-child(30), .ticksrapid:nth-child(30) {
+.ticksfeed:nth-child(30), .ticksspeed:nth-child(30), .ticksrapid:nth-child(30), .ticksxyjograte:nth-child(30), .tickszjograte:nth-child(30) {
   transform: rotate(140deg);
 }
 
-.ticksfeed:nth-child(31), .ticksspeed:nth-child(31), .ticksrapid:nth-child(31) {
+.ticksfeed:nth-child(31), .ticksspeed:nth-child(31), .ticksrapid:nth-child(31), .ticksxyjograte:nth-child(31), .tickszjograte:nth-child(31) {
   transform: rotate(150deg);
 }
 
