--- a/app/css/index.css
+++ b/app/css/index.css
@@ -15,6 +15,20 @@ body {
   color: #fff;
 }
 
+a {
+  color: #fff;
+}
+
+/* .appbar {
+  width: 100%;
+  padding-top: 0px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 3px;
+
+} */
 .appbar {
   background-color: #333;
   padding: 5px;
@@ -24,6 +38,9 @@ body {
   -webkit-box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.15);
   -moz-box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.15);
   box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.65);
+  font-size: 16px;
+  font-weight: 400;
+  text-shadow: 0px 0px 3px #ccc;
 }
 
 @font-face {
@@ -87,6 +104,11 @@ input:focus, textarea, button:focus {
 
 .flex-container {
   display: flex;
+  display: -webkit-flex;
+  /* Safari */
+  -webkit-flex-wrap: wrap;
+  /* Safari 6.1+ */
+  flex-wrap: wrap;
 }
 
 .pf {
@@ -101,7 +123,7 @@ input:focus, textarea, button:focus {
 #console {
   font-family: "Lucida Console", Monaco, monospace;
   height: 240px;
-  width: 397px;
+  width: 420px;
   overflow-y: auto;
   overflow-x: none;
   overflow-wrap: break-word;
@@ -125,7 +147,7 @@ input:focus, textarea, button:focus {
 }
 
 .monitor {
-  background-image: radial-gradient(rgba(50, 50, 50, 0.75), black 120%);
+  /* background-image: radial-gradient(rgba(50, 50, 50, 0.75), black 120%); */
   text-shadow: 0 0 2px #888;
   position: relative;
   background-repeat: no-repeat;
@@ -169,10 +191,11 @@ input:focus, textarea, button:focus {
 }
 
 .button-group-item {
-  margin: 5px;
+  margin-right: 5px;
 }
 
 .card {
+  flex: 0 0 auto;
   background-color: #333;
   padding: 5px;
   margin: 3px;
@@ -181,7 +204,7 @@ input:focus, textarea, button:focus {
   -webkit-box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.15);
   -moz-box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.15);
   box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.65);
-  resize: both;
+  /* resize: both; */
   overflow: hidden;
 }
 
@@ -460,4 +483,17 @@ select::-ms-expand {
 .sdbtn:disabled,
 .sdbtn[disabled] {
   color: #555;
+}
+
+.opac {
+  opacity: .8;
+}
+
+.move-cursor {
+  cursor: move;
+}
+
+.grab-cursor {
+  cursor: grab;
+  cursor: -webkit-grab;
 }
